--- a/templates/libro/crear_autor.html
+++ b/templates/libro/crear_autor.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <form method="POST">
+        {% csrf_token %}
         {{ autor_form.as_p }}
         <button type="submit">Crear</button>
     </form>
